--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
     { "src": "/script.js", "dest": "/landing page/script.js" },
     { "src": "/Register.html", "dest": "/landing page/Register.html" },
     { "src": "/register.css", "dest": "/landing page/register.css" },
-    { "src": "/Photos/(.*)", "dest": "/landing page/Photos/$1" }
+    { "src": "/Photos/(.*)", "dest": "/landing page/Photos/$1" },
+    { "src": "/(.*)", "dest": "/landing page/index.html" }
   ]
 }
